--- a/src/main/webapp/pages/templates/template.xhtml
+++ b/src/main/webapp/pages/templates/template.xhtml
@@ -47,9 +47,7 @@
 
     <div class="wrapper">
 
-        <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div>
                 <a href="#menu-toggle" class="navbar-brand" id="menu-toggle"
                    onclick="event.preventDefault();$('.wrapper').toggleClass('toggled');">
@@ -57,8 +55,6 @@
                 </a>
                 <a class="navbar-brand" href="#{facesContext.externalContext.requestContextPath}/pages/templates/template.xhtml">Gerenciador de Tarefas</a>
             </div>
-            <!-- Top Menu Items -->
-            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div id="sidebar-wrapper">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
@@ -86,7 +82,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </nav>
 
         <h:form id="form" prependId="false" onkeypress="return event.keyCode != 13">
@@ -100,43 +95,9 @@
 
             <ui:insert name="modals"/>
         </h:form>
-        <!-- /#page-wrapper -->
 
     </div>
-    <!-- /#wrapper -->
-    <script type="text/javascript">
-        function showMessage(message, type) {
-            Noty.closeAll();
-            new Noty({
-                type: type,
-                layout: 'topRight',
-                text: message,
-                closeWith: ['click'],
-                modal: false
-            }).show();
-        }
-
-        if (typeof jsf !== 'undefined') {
-            jsf.ajax.addOnEvent(function (data) {
-                var status = data.status;
-                switch (status) {
-                    case "begin":
-                        $.blockUI();
-                        break;
-                    case "complete":
-                        $.unblockUI();
-                        break;
-                }
-            });
-
-            jsf.ajax.addOnError(function (data) {
-                showMessage(data.errorMessage, 'error');
-            });
-        }
-        $.blockUI.defaults.message = '<h1>Processando</h1>';
-        $.blockUI.defaults.baseZ = 10000;
-        $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
-    </script>
+    <h:outputScript name="js/template.js"/>
     <ui:insert name="scripts"/>
 
     <h:messages id="messages"/>
